pom xml add new dependecies